Better tool selection (#355)
* Refactored assistant tools selection into dedicated component

* Added provisioning info to AssistantWithTools

* Separated provisioned tools from user provided tools

* Multiple columns

* Assistant tool addition

* Using cards for assistant tools panel choice

* Avoid overflow

* Removed tool description, not clear if wanted

* Added capabilty flag to Tool

* Using new Tool.capability

* I18N

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -5,8 +5,10 @@
   "action": "Action",
   "active": "Active",
   "active-tools": "Active tools",
+  "add": "Add",
   "add-connection": "Add Connection",
   "add-members": "Add Members",
+  "add-tools": "Add tools",
   "add-user": "Add user",
   "admin": "Admin",
   "administrator-settings": "Administrator settings",
@@ -53,6 +55,7 @@
   "backends": "Backends",
   "buy-now": "Buy now",
   "cancel": "Cancel",
+  "capabilities": "Capabilities",
   "cant_create_assistant_if_no_backend": "Can't create an assistant if no backend is defined",
   "change_owner": "Change owner",
   "change-password": "Change password",
@@ -280,6 +283,7 @@
   "select_role_placeholder": "Select a role...",
   "select_role": "Select a role",
   "select-members-to-add": "Select workspace members",
+  "select-tools-to-add": "Select tools to add",
   "send-magic-link": "Send Magic Link",
   "settings-successfully-updated": "Settings have been successfully updated",
   "settings": "Settings",
