--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -5,8 +5,10 @@
   "action": "Azione",
   "active": "Attivo",
   "active-tools": "Tool attivi",
+  "add": "Aggiungi",
   "add-connection": "Aggiungi Connessione",
   "add-members": "Aggiungi Membri",
+  "add-tools": "Aggiungi tool",
   "add-user": "Aggiungi Utente",
   "admin": "Amministratore",
   "administrator-settings": "Impostazioni Amministratore",
@@ -54,6 +56,7 @@
   "buy-now": "Acquista ora",
   "cancel": "Annulla",
   "cant_create_assistant_if_no_backend": "Non è possibile creare un assistente se non è definito un backend",
+  "capabilities": "Funzionalità",
   "change_owner": "Cambia proprietario",
   "change-password": "Cambia password",
   "change_role": "Cambia ruolo",
@@ -280,6 +283,7 @@
   "select_role_placeholder": "Seleziona un ruolo...",
   "select_role": "Seleziona un ruolo",
   "select-members-to-add": "Seleziona membri del workspace",
+  "select-tools-to-add": "Seleziona tool da aggiungere",
   "send-magic-link": "Invia Magic Link",
   "settings-successfully-updated": "Impostazioni modificate con successo",
   "settings": "Impostazioni",
