--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -128,6 +128,7 @@
   "current-password": "Password Attuale",
   "daily-usage": "Utilizzo Giornaliero",
   "dashboard": "Dashboard",
+  "default": "Predefinito",
   "default-redirect-url": "URL di reindirizzamento predefinito",
   "delete-member-warning": "Eliminare un membro comporterà la cancellazione di tutte le attività correlate. Questa azione non può essere annullata.",
   "delete-sso-connection-confirmation": "Sei sicuro di voler eliminare questa connessione SSO? Questa azione non può essere annullata.",
@@ -172,10 +173,9 @@
   "gcpvertex-backend": "Gcp Vertex",
   "general": "Generale",
   "get-started": "Inizia Ora",
-  "hide-in-sidebar": "Nascondi nella barra laterale",
-  "instructions": "Istruzioni",
-  "logiclecloud-backend": "Logicle Cloud",
   "hi": "Ciao",
+  "hide-in-sidebar": "Nascondi nella barra laterale",
+  "high": "High",
   "id": "ID",
   "identity-provider-setup": "Trova i metadata SP per la configurazione dell'Identity Provider presso",
   "important_logicle_is_100%_unaffiliated_with_openai": "Importante: Logicle è al 100% non affiliata con OpenAI",
@@ -185,6 +185,7 @@
   "insert_a_tag_and_press_enter": "Inserisci un tag e premi invio",
   "insert_gcp_credentials_placeholder": "Inserisci le credenziali GCP...",
   "insert_openapi_spec_placeholder": "Inserisci una specifica YAML OpenAPI...",
+  "instructions": "Istruzioni",
   "invalid-credentials": "Credenziali di accesso non valide",
   "invite-create-account": "Per continuare, devi creare un nuovo account o accedere a un account esistente.",
   "invocation_of_tool": "Invocazione del tool",
@@ -193,9 +194,12 @@
   "link_created": "Link creato",
   "links_updated": "Links aggiornati",
   "localai-backend": "Server LocalAI",
+  "logiclecloud-backend": "Logicle Cloud",
   "login-error": "Si è verificato un problema con il tuo accesso.",
   "logout": "Disconnettiti",
+  "low": "Basso",
   "manage-members": "Gestisci membri",
+  "medium": "Medio",
   "members-added": "Membri aggiunti con successo",
   "member-deleted": "Membro eliminato con successo.",
   "member-role-updated": "Ruolo del membro modificato con successo.",
@@ -246,6 +250,7 @@
   "prompts": "Prompt",
   "provision": "Provisiona e de-provisiona utenti con il tuo provider di directory.",
   "public_display_name": "Il nome del backend",
+  "reasoning_effort": "Livello di ragionamento",
   "recover": "Recupera",
   "redirect-url": "URL di reindirizzamento",
   "remove-assistant-confirmation": "Sei sicuro di voler rimuovere questo assistente? Questa azione non può essere annullata.",
