--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -128,6 +128,7 @@
   "current-password": "Current Password",
   "daily-usage": "Daily Usage",
   "dashboard": "Dashboard",
+  "default": "Default",
   "default-redirect-url": "Default redirect URL",
   "delete-member-warning": "Deleting a member will delete all activites related to that member. This action cannot be undone.",
   "delete-sso-connection-confirmation": "Are you sure you want to delete this SSO Connection? This action can not be undone.",
@@ -169,12 +170,12 @@
   "features": "Features",
   "found_an_unsaved_version": "Found an unsaved version",
   "frequently-asked": "Frequently asked questions",
-  "general": "General",
   "gcpvertex-backend": "Gcp Vertex",
+  "general": "General",
   "get-started": "Get Started",
-  "hide-in-sidebar": "Hide in sidebar",
-  "logiclecloud-backend": "Logicle Cloud",
   "hi": "Hi",
+  "hide-in-sidebar": "Hide in sidebar",
+  "high": "High",
   "id": "Id",
   "identity-provider-setup": "Please find the SP metadata for Identity Provider configuration at",
   "important_logicle_is_100%_unaffiliated_with_openai": "Important: Logicle is 100% unaffiliated with OpenAI",
@@ -191,11 +192,14 @@
   "knowledge": "Knowledge",
   "legal-disclaimer": "Logicle Chat can make mistakes. Consider checking important information.",
   "localai-backend": "LocalAI Server",
+  "logiclecloud-backend": "Logicle Cloud",
   "link_created": "Link created",
   "links_updated": "Links updated",
   "login-error": "There was a problem with your login.",
   "logout": "Logout",
+  "low": "Low",
   "manage-members": "Manage members",
+  "medium": "Medium",
   "members-added": "Members added successfully",
   "member-deleted": "Member deleted successfully.",
   "member-role-updated": "Member role updated successfully.",
@@ -246,6 +250,7 @@
   "prompts": "Prompts",
   "provision": "Provision and de-provision users with your directory provider.",
   "public_display_name": "The name of the backend",
+  "reasoning_effort": "Reasoning effort",
   "recover": "Recover",
   "redirect-url": "Redirect URL",
   "remove-assistant-confirmation": "Are you sure you want to remove this assistant? This action cannot be undone",
