--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -128,7 +128,7 @@
   "current-password": "Current Password",
   "daily-usage": "Daily Usage",
   "dashboard": "Dashboard",
-  "default": "Default",
+  "default_": "Default",
   "default-redirect-url": "Default redirect URL",
   "delete-member-warning": "Deleting a member will delete all activites related to that member. This action cannot be undone.",
   "delete-sso-connection-confirmation": "Are you sure you want to delete this SSO Connection? This action can not be undone.",
