--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -23,7 +23,7 @@
   "allow-workspace": "Consenti ai membri del workspace di accedere utilizzando un Identity Provider.",
   "already-have-an-account": "Hai già un account?",
   "analytics": "Statistiche uso",
-  "anthropic-backend": "API Antropiche",
+  "anthropic_backend": "Anthropic",
   "api_endpoint_placeholder": "Inserisci il tuo endpoint API",
   "api_key_placeholder": "Inserisci l' API key per accedere alle API LLM",
   "api-key": "API key",
@@ -36,8 +36,8 @@
   "apikey-description-placeholder": "Descrizione facile da ricordare della API key...",
   "apikey-wont-be-able-to-see-again": "Non potrai vedere di nuovo questa API key. Salvala in un luogo sicuro, come un gestore di password o un archivio segreto.",
   "assertion_encryption": "Crittografia dell'asserzione",
-  "assistant": "Assistente",
   "assertion_signature": "Firma dell'asserzione",
+  "assistant": "Assistente",
   "assistant-deleted": "Assistente eliminato con successo",
   "assistant-description-field-placeholder": "Aggiungi una breve descrizione di cosa fa questo Assistente",
   "assistant-details": "Dettagli assistente",
@@ -170,7 +170,7 @@
   "features": "Caratteristiche",
   "found_an_unsaved_version": "Ho trovato una versione salvata",
   "frequently-asked": "Domande frequenti",
-  "gcpvertex-backend": "Gcp Vertex",
+  "gcpvertex_backend": "Gcp Vertex",
   "general": "Generale",
   "get-started": "Inizia Ora",
   "hi": "Ciao",
@@ -193,8 +193,8 @@
   "legal-disclaimer": "Logicle Chat può commettere errori. Verifica le informazioni importanti.",
   "link_created": "Link creato",
   "links_updated": "Links aggiornati",
-  "localai-backend": "Server LocalAI",
-  "logiclecloud-backend": "Logicle Cloud",
+  "localai_backend": "Server LocalAI",
+  "logiclecloud_backend": "Logicle Cloud",
   "login-error": "Si è verificato un problema con il tuo accesso.",
   "logout": "Disconnettiti",
   "low": "Basso",
@@ -231,7 +231,7 @@
   "none": "Nessuno",
   "older": "Più vecchi",
   "only-me": "Solo io",
-  "openai-backend": "OpenAI",
+  "openai_backend": "OpenAI",
   "openapi_spec": "Specifica OpenAPI",
   "or-sign-in-with": "Oppure Accedi Con",
   "owner": "Proprietario",
@@ -335,7 +335,7 @@
   "temperature": "Temperatura",
   "the_system": "Il sistema",
   "today": "Oggi",
-  "togetherai-backend": "Together AI API",
+  "togetherai_backend": "Together AI",
   "token-limit": "Limite Token",
   "tool-successfully-created": "Tool creato con successo",
   "tools": "Tools",
@@ -345,8 +345,8 @@
   "update_links": "Aggiorna link",
   "update-password": "Modifica Password",
   "url": "URL",
-  "user-deleted": "Utente eliminato con successo",
   "user": "Utente",
+  "user-deleted": "Utente eliminato con successo",
   "users": "Utenti",
   "welcome_to_logicle": "Benvenuto in logicle",
   "workspace-connections": "Connessioni SSO del Workspace",
