--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -23,7 +23,7 @@
   "allow-workspace": "Allow workspace members to login using an Identity Provider.",
   "already-have-an-account": "Already have an account?",
   "analytics": "Analytics",
-  "anthropic-backend": "Anthropic API",
+  "anthropic_backend": "Anthropic",
   "api_endpoint_placeholder": "Enter your api endpoint",
   "api_key_placeholder": "Enter the API key to access the LLM APIs",
   "api-key": "API key",
@@ -55,8 +55,8 @@
   "backends": "Backends",
   "buy-now": "Buy now",
   "cancel": "Cancel",
-  "capabilities": "Capabilities",
   "cant_create_assistant_if_no_backend": "Can't create an assistant if no backend is defined",
+  "capabilities": "Capabilities",
   "change_owner": "Change owner",
   "change-password": "Change password",
   "change_role": "Change role",
@@ -104,6 +104,7 @@
   "create_assistant": "Create assistant",
   "create_backend": "Create backend",
   "create_connection": "Create connection",
+  "create_link": "Create link",
   "create_new": "Create new",
   "create_tool_field_name_label": "Name",
   "create_tool_field_name_placeholder": "Display name of this tool...",
@@ -118,7 +119,6 @@
   "create-directory-connection": "Create Directory Connection",
   "create-directory-message": "Automatically provision and de-provision users with your directory provider.",
   "create-directory": "Create Directory",
-  "create_link": "Create link",
   "create-new-assistant": "Create a new assistant",
   "create-oidc-connection": "Create OIDC Connection",
   "create-saml-connection": "Create SAML Connection",
@@ -143,9 +143,9 @@
   "directory-sync-provider": "Directory Sync Provider",
   "directory-sync": "Directory Sync",
   "discovery-url": "Discovery URL",
+  "do_you_want_to_recover_an_unsaved_version": "Do you want to recover an unsaved version?",
   "dont-have-an-account": "Don't have an account?",
   "drop_files_here_or_browse_for_file_upload": "Drop files here or <0>browse</0> for file upload",
-  "do_you_want_to_recover_an_unsaved_version": "Do you want to recover an unsaved version?",
   "duplicate": "Duplicate",
   "edit_role": "Edit role",
   "edit": "Edit",
@@ -170,7 +170,7 @@
   "features": "Features",
   "found_an_unsaved_version": "Found an unsaved version",
   "frequently-asked": "Frequently asked questions",
-  "gcpvertex-backend": "Gcp Vertex",
+  "gcpvertex_backend": "Gcp Vertex",
   "general": "General",
   "get-started": "Get Started",
   "hi": "Hi",
@@ -191,10 +191,10 @@
   "invocation_of_tool": "Invocation of tool",
   "knowledge": "Knowledge",
   "legal-disclaimer": "Logicle Chat can make mistakes. Consider checking important information.",
-  "localai-backend": "LocalAI Server",
-  "logiclecloud-backend": "Logicle Cloud",
   "link_created": "Link created",
   "links_updated": "Links updated",
+  "localai_backend": "LocalAI Server",
+  "logiclecloud_backend": "Logicle Cloud",
   "login-error": "There was a problem with your login.",
   "logout": "Logout",
   "low": "Low",
@@ -231,7 +231,7 @@
   "none": "None",
   "older": "Older",
   "only-me": "Only me",
-  "openai-backend": "OpenAI",
+  "openai_backend": "OpenAI",
   "openapi_spec": "OpenAPI spec",
   "or-sign-in-with": "Or Sign In With",
   "owner": "Owner",
@@ -335,7 +335,7 @@
   "temperature": "Temperature",
   "the_system": "The sistem",
   "today": "Today",
-  "togetherai-backend": "Together AI API",
+  "togetherai_backend": "Together AI",
   "token-limit": "Token Limit",
   "tool-successfully-created": "Tool has been successfully created",
   "tools": "Tools",
