--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -23,7 +23,7 @@
   "allow-workspace": "Allow workspace members to login using an Identity Provider.",
   "already-have-an-account": "Already have an account?",
   "analytics": "Analytics",
-  "anthropic-backend": "Anthropic API",
+  "anthropic_backend": "Anthropic",
   "api_endpoint_placeholder": "Enter your api endpoint",
   "api_key_placeholder": "Enter the API key to access the LLM APIs",
   "api-key": "API key",
@@ -55,8 +55,8 @@
   "backends": "Backends",
   "buy-now": "Buy now",
   "cancel": "Cancel",
-  "capabilities": "Capabilities",
   "cant_create_assistant_if_no_backend": "Can't create an assistant if no backend is defined",
+  "capabilities": "Capabilities",
   "change_owner": "Change owner",
   "change-password": "Change password",
   "change_role": "Change role",
@@ -104,6 +104,7 @@
   "create_assistant": "Create assistant",
   "create_backend": "Create backend",
   "create_connection": "Create connection",
+  "create_link": "Create link",
   "create_new": "Create new",
   "create_tool_field_name_label": "Name",
   "create_tool_field_name_placeholder": "Display name of this tool...",
@@ -118,7 +119,6 @@
   "create-directory-connection": "Create Directory Connection",
   "create-directory-message": "Automatically provision and de-provision users with your directory provider.",
   "create-directory": "Create Directory",
-  "create_link": "Create link",
   "create-new-assistant": "Create a new assistant",
   "create-oidc-connection": "Create OIDC Connection",
   "create-saml-connection": "Create SAML Connection",
@@ -128,6 +128,7 @@
   "current-password": "Current Password",
   "daily-usage": "Daily Usage",
   "dashboard": "Dashboard",
+  "default_": "Default",
   "default-redirect-url": "Default redirect URL",
   "delete-member-warning": "Deleting a member will delete all activites related to that member. This action cannot be undone.",
   "delete-sso-connection-confirmation": "Are you sure you want to delete this SSO Connection? This action can not be undone.",
@@ -142,9 +143,9 @@
   "directory-sync-provider": "Directory Sync Provider",
   "directory-sync": "Directory Sync",
   "discovery-url": "Discovery URL",
+  "do_you_want_to_recover_an_unsaved_version": "Do you want to recover an unsaved version?",
   "dont-have-an-account": "Don't have an account?",
   "drop_files_here_or_browse_for_file_upload": "Drop files here or <0>browse</0> for file upload",
-  "do_you_want_to_recover_an_unsaved_version": "Do you want to recover an unsaved version?",
   "duplicate": "Duplicate",
   "edit_role": "Edit role",
   "edit": "Edit",
@@ -169,12 +170,12 @@
   "features": "Features",
   "found_an_unsaved_version": "Found an unsaved version",
   "frequently-asked": "Frequently asked questions",
+  "gcpvertex_backend": "Gcp Vertex",
   "general": "General",
-  "gcpvertex-backend": "Gcp Vertex",
   "get-started": "Get Started",
-  "hide-in-sidebar": "Hide in sidebar",
-  "logiclecloud-backend": "Logicle Cloud",
   "hi": "Hi",
+  "hide-in-sidebar": "Hide in sidebar",
+  "high": "High",
   "id": "Id",
   "identity-provider-setup": "Please find the SP metadata for Identity Provider configuration at",
   "important_logicle_is_100%_unaffiliated_with_openai": "Important: Logicle is 100% unaffiliated with OpenAI",
@@ -190,12 +191,15 @@
   "invocation_of_tool": "Invocation of tool",
   "knowledge": "Knowledge",
   "legal-disclaimer": "Logicle Chat can make mistakes. Consider checking important information.",
-  "localai-backend": "LocalAI Server",
   "link_created": "Link created",
   "links_updated": "Links updated",
+  "localai_backend": "LocalAI Server",
+  "logiclecloud_backend": "Logicle Cloud",
   "login-error": "There was a problem with your login.",
   "logout": "Logout",
+  "low": "Low",
   "manage-members": "Manage members",
+  "medium": "Medium",
   "members-added": "Members added successfully",
   "member-deleted": "Member deleted successfully.",
   "member-role-updated": "Member role updated successfully.",
@@ -227,7 +231,7 @@
   "none": "None",
   "older": "Older",
   "only-me": "Only me",
-  "openai-backend": "OpenAI",
+  "openai_backend": "OpenAI",
   "openapi_spec": "OpenAPI spec",
   "or-sign-in-with": "Or Sign In With",
   "owner": "Owner",
@@ -246,6 +250,7 @@
   "prompts": "Prompts",
   "provision": "Provision and de-provision users with your directory provider.",
   "public_display_name": "The name of the backend",
+  "reasoning_effort": "Reasoning effort",
   "recover": "Recover",
   "redirect-url": "Redirect URL",
   "remove-assistant-confirmation": "Are you sure you want to remove this assistant? This action cannot be undone",
@@ -330,7 +335,7 @@
   "temperature": "Temperature",
   "the_system": "The sistem",
   "today": "Today",
-  "togetherai-backend": "Together AI API",
+  "togetherai_backend": "Together AI",
   "token-limit": "Token Limit",
   "tool-successfully-created": "Tool has been successfully created",
   "tools": "Tools",
