--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -23,7 +23,7 @@
   "allow-workspace": "Consenti ai membri del workspace di accedere utilizzando un Identity Provider.",
   "already-have-an-account": "Hai già un account?",
   "analytics": "Statistiche uso",
-  "anthropic-backend": "API Antropiche",
+  "anthropic_backend": "Anthropic",
   "api_endpoint_placeholder": "Inserisci il tuo endpoint API",
   "api_key_placeholder": "Inserisci l' API key per accedere alle API LLM",
   "api-key": "API key",
@@ -36,8 +36,8 @@
   "apikey-description-placeholder": "Descrizione facile da ricordare della API key...",
   "apikey-wont-be-able-to-see-again": "Non potrai vedere di nuovo questa API key. Salvala in un luogo sicuro, come un gestore di password o un archivio segreto.",
   "assertion_encryption": "Crittografia dell'asserzione",
-  "assistant": "Assistente",
   "assertion_signature": "Firma dell'asserzione",
+  "assistant": "Assistente",
   "assistant-deleted": "Assistente eliminato con successo",
   "assistant-description-field-placeholder": "Aggiungi una breve descrizione di cosa fa questo Assistente",
   "assistant-details": "Dettagli assistente",
@@ -128,6 +128,7 @@
   "current-password": "Password Attuale",
   "daily-usage": "Utilizzo Giornaliero",
   "dashboard": "Dashboard",
+  "default_": "Predefinito",
   "default-redirect-url": "URL di reindirizzamento predefinito",
   "delete-member-warning": "Eliminare un membro comporterà la cancellazione di tutte le attività correlate. Questa azione non può essere annullata.",
   "delete-sso-connection-confirmation": "Sei sicuro di voler eliminare questa connessione SSO? Questa azione non può essere annullata.",
@@ -169,13 +170,12 @@
   "features": "Caratteristiche",
   "found_an_unsaved_version": "Ho trovato una versione salvata",
   "frequently-asked": "Domande frequenti",
-  "gcpvertex-backend": "Gcp Vertex",
+  "gcpvertex_backend": "Gcp Vertex",
   "general": "Generale",
   "get-started": "Inizia Ora",
-  "hide-in-sidebar": "Nascondi nella barra laterale",
-  "instructions": "Istruzioni",
-  "logiclecloud-backend": "Logicle Cloud",
   "hi": "Ciao",
+  "hide-in-sidebar": "Nascondi nella barra laterale",
+  "high": "High",
   "id": "ID",
   "identity-provider-setup": "Trova i metadata SP per la configurazione dell'Identity Provider presso",
   "important_logicle_is_100%_unaffiliated_with_openai": "Importante: Logicle è al 100% non affiliata con OpenAI",
@@ -185,6 +185,7 @@
   "insert_a_tag_and_press_enter": "Inserisci un tag e premi invio",
   "insert_gcp_credentials_placeholder": "Inserisci le credenziali GCP...",
   "insert_openapi_spec_placeholder": "Inserisci una specifica YAML OpenAPI...",
+  "instructions": "Istruzioni",
   "invalid-credentials": "Credenziali di accesso non valide",
   "invite-create-account": "Per continuare, devi creare un nuovo account o accedere a un account esistente.",
   "invocation_of_tool": "Invocazione del tool",
@@ -192,10 +193,13 @@
   "legal-disclaimer": "Logicle Chat può commettere errori. Verifica le informazioni importanti.",
   "link_created": "Link creato",
   "links_updated": "Links aggiornati",
-  "localai-backend": "Server LocalAI",
+  "localai_backend": "Server LocalAI",
+  "logiclecloud_backend": "Logicle Cloud",
   "login-error": "Si è verificato un problema con il tuo accesso.",
   "logout": "Disconnettiti",
+  "low": "Basso",
   "manage-members": "Gestisci membri",
+  "medium": "Medio",
   "members-added": "Membri aggiunti con successo",
   "member-deleted": "Membro eliminato con successo.",
   "member-role-updated": "Ruolo del membro modificato con successo.",
@@ -227,7 +231,7 @@
   "none": "Nessuno",
   "older": "Più vecchi",
   "only-me": "Solo io",
-  "openai-backend": "OpenAI",
+  "openai_backend": "OpenAI",
   "openapi_spec": "Specifica OpenAPI",
   "or-sign-in-with": "Oppure Accedi Con",
   "owner": "Proprietario",
@@ -246,6 +250,7 @@
   "prompts": "Prompt",
   "provision": "Provisiona e de-provisiona utenti con il tuo provider di directory.",
   "public_display_name": "Il nome del backend",
+  "reasoning_effort": "Livello di ragionamento",
   "recover": "Recupera",
   "redirect-url": "URL di reindirizzamento",
   "remove-assistant-confirmation": "Sei sicuro di voler rimuovere questo assistente? Questa azione non può essere annullata.",
@@ -330,7 +335,7 @@
   "temperature": "Temperatura",
   "the_system": "Il sistema",
   "today": "Oggi",
-  "togetherai-backend": "Together AI API",
+  "togetherai_backend": "Together AI",
   "token-limit": "Limite Token",
   "tool-successfully-created": "Tool creato con successo",
   "tools": "Tools",
@@ -340,8 +345,8 @@
   "update_links": "Aggiorna link",
   "update-password": "Modifica Password",
   "url": "URL",
-  "user-deleted": "Utente eliminato con successo",
   "user": "Utente",
+  "user-deleted": "Utente eliminato con successo",
   "users": "Utenti",
   "welcome_to_logicle": "Benvenuto in logicle",
   "workspace-connections": "Connessioni SSO del Workspace",
