--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -240,6 +240,7 @@
   "password-reset-link-sent": "Password reset link sent",
   "password-successfully-updated": "Password has been successfully updated",
   "password": "Password",
+  "perplexity_backend": "Perplexity",
   "preferences": "Preferences",
   "preview": "Preview",
   "previous-week": "Previous 7 Days",
