--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -240,6 +240,7 @@
   "password-reset-link-sent": "Link per il reset della password inviato",
   "password-successfully-updated": "Password modificata con successo",
   "password": "Password",
+  "perplexity_backend": "Perplexity",
   "preferences": "Preferenze",
   "preview": "Anteprima",
   "previous-week": "Ultimi 7 Giorni",
