Added button to remove user password

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -238,6 +238,7 @@
   "parameters": "Parameters",
   "password-is-required": "The Password field is required",
   "password-reset-link-sent": "Password reset link sent",
+  "password-successfully-removed": "Password has been successfully removed",
   "password-successfully-updated": "Password has been successfully updated",
   "password": "Password",
   "perplexity_backend": "Perplexity",
@@ -260,6 +261,7 @@
   "remove-backend": "Remove Backend",
   "remove-chat-confirmation": "Are you sure you want to remove this chat? This action cannot be undone",
   "remove-chat": "Remove chat",
+  "remove-password": "Remove password",
   "remove-photo": "Remove Photo",
   "remove-tool-confirmation": "Are you sure you want to delete this tool? Deleting the tool will delete all resources and data associated with the tool forever.",
   "remove-tool": "Remove Tool",
