Improve management of sso only users (i.e. no password) (#374)
* Added button to remove user password

* Show passwordless flag for users

* Show if the user has a password in admin user list

* Make it possible for Admins to create users without password

* Awaiting awaitables

--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -142,6 +142,7 @@
   "directory-sync-message": "Il provider di sincronizzazione directory ti chiederà le seguenti informazioni per configurare la tua app SCIM.",
   "directory-sync-provider": "Provider di Sincronizzazione Directory",
   "directory-sync": "Sincronizzazione Directory",
+  "disable_password_login": "Disable password login",
   "discovery-url": "URL di Scoperta",
   "do_you_want_to_recover_an_unsaved_version": "Vuoi recuperare una versione non salvata?",
   "dont-have-an-account": "Non hai un account?",
@@ -238,6 +239,7 @@
   "parameters": "Parametri",
   "password-is-required": "Il campo Password è obbligatorio",
   "password-reset-link-sent": "Link per il reset della password inviato",
+  "password-successfully-removed": "Password rimossa con successo",
   "password-successfully-updated": "Password modificata con successo",
   "password": "Password",
   "perplexity_backend": "Perplexity",
@@ -260,6 +262,7 @@
   "remove-backend": "Rimuovi Backend",
   "remove-chat-confirmation": "Sei sicuro di voler rimuovere questa chat? Questa azione non può essere annullata.",
   "remove-chat": "Rimuovi Chat",
+  "remove-password": "Rimuovi password",
   "remove-photo": "Rimuovi Foto",
   "remove-tool-confirmation": "Sei sicuro di voler eliminare questo tool? Eliminare il tool eliminerà tutte le risorse e i dati associati per sempre.",
   "remove-tool": "Rimuovi Tool",
@@ -328,6 +331,7 @@
   "table-column-model": "Modello",
   "table-column-name": "Nome",
   "table-column-owner": "Proprietario",
+  "table-column-passwordless": "Passwordless",
   "table-column-redirect-url": "URL di Reindirizzamento",
   "table-column-selected": "Selezionato",
   "table-column-type": "Tipo",
