i18N (not related to PR)

--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -290,6 +290,7 @@
   "search_placeholder": "Cerca...",
   "select_assistant_owner": "Seleziona il proprietario dell'assistente...",
   "select_assistant": "Scegli un assistente",
+  "select_language": "Seleziona una lingua",
   "select_owner_placeholder": "Seleziona un proprietario...",
   "select_role_placeholder": "Seleziona un ruolo...",
   "select_role": "Seleziona un ruolo",
