--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -289,6 +289,7 @@
   "search_placeholder": "Search...",
   "select_assistant_owner": "Select the assistant owner...",
   "select_assistant": "Choose an assistant",
+  "select_language": "Select your language",
   "select_owner_placeholder": "Select an owner...",
   "select_role_placeholder": "Select a role...",
   "select_role": "Select a role",
