Mark users as sso at creation time (#375)
* UI support for ssoUser

* i18N (not related to PR)

* Invert password edit visibility logic

* No point in provisioning ssoUser's

* Linting

* I removed an unused parameter but did not patch the invocation

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -24,6 +24,7 @@
   "already-have-an-account": "Already have an account?",
   "analytics": "Analytics",
   "anthropic_backend": "Anthropic",
+  "any_available": "Any available",
   "api_endpoint_placeholder": "Enter your api endpoint",
   "api_key_placeholder": "Enter the API key to access the LLM APIs",
   "api-key": "API key",
@@ -47,6 +48,7 @@
   "assistant-successfully-updated": "Assistant has been successfully updated",
   "assistants": "Assistants",
   "audit-logs": "Audit Logs",
+  "auth-methods": "Authentication methods",
   "auth-token": "Auth Token",
   "backend-deleted": "Backend successfully deleted",
   "backend-successfully-created": "Backend has been successfully created",
@@ -287,6 +289,7 @@
   "search_placeholder": "Search...",
   "select_assistant_owner": "Select the assistant owner...",
   "select_assistant": "Choose an assistant",
+  "select_language": "Select your language",
   "select_owner_placeholder": "Select an owner...",
   "select_role_placeholder": "Select a role...",
   "select_role": "Select a role",
@@ -314,6 +317,7 @@
   "sso-connection-deleted": "SSO Connection deleted successfully",
   "sso-connection-successfully-created": "SSO connection has been successfully created",
   "sso-connection-successfully-updated": "SSO connection has been successfully updated",
+  "sso_user": "SSO User",
   "start_from_here": "Start from here",
   "submit": "Submit",
   "successfully-joined": "You have successfully joined the workspace.",
@@ -330,9 +334,9 @@
   "table-column-model": "Model",
   "table-column-name": "Name",
   "table-column-owner": "Owner",
-  "table-column-passwordless": "Passwordless",
   "table-column-redirect-url": "Redirect URL",
   "table-column-selected": "Selected",
+  "table-column-sso-user": "SSO User",
   "table-column-type": "Type",
   "table-column-user-role": "Role",
   "tags": "Tags",
