--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -24,6 +24,7 @@
   "already-have-an-account": "Hai già un account?",
   "analytics": "Statistiche uso",
   "anthropic_backend": "Anthropic",
+  "any_available": "Tutti i disponibili",
   "api_endpoint_placeholder": "Inserisci il tuo endpoint API",
   "api_key_placeholder": "Inserisci l' API key per accedere alle API LLM",
   "api-key": "API key",
@@ -47,6 +48,7 @@
   "assistant-successfully-updated": "Assistente modificato con successo",
   "assistants": "Assistenti",
   "audit-logs": "Registri di Audit",
+  "auth-methods": "Metodi di autenticazione",
   "auth-token": "Token di Autenticazione",
   "backend-deleted": "Backend eliminato con successo",
   "backend-successfully-created": "Backend creato con successo",
@@ -288,6 +290,7 @@
   "search_placeholder": "Cerca...",
   "select_assistant_owner": "Seleziona il proprietario dell'assistente...",
   "select_assistant": "Scegli un assistente",
+  "select_language": "Seleziona una lingua",
   "select_owner_placeholder": "Seleziona un proprietario...",
   "select_role_placeholder": "Seleziona un ruolo...",
   "select_role": "Seleziona un ruolo",
@@ -315,6 +318,7 @@
   "sso-connection-deleted": "Connessione SSO eliminata con successo",
   "sso-connection-successfully-created": "Connessione SSO creata con successo",
   "sso-connection-successfully-updated": "Connessione SSO modificata con successo",
+  "sso_user": "Utente SSO",
   "start_from_here": "Inizia da qui",
   "submit": "Invia",
   "successfully-joined": "Sei entrato con successo nel workspace.",
@@ -331,9 +335,9 @@
   "table-column-model": "Modello",
   "table-column-name": "Nome",
   "table-column-owner": "Proprietario",
-  "table-column-passwordless": "Passwordless",
   "table-column-redirect-url": "URL di Reindirizzamento",
   "table-column-selected": "Selezionato",
+  "table-column-sso-user": "Utente SSO",
   "table-column-type": "Tipo",
   "table-column-user-role": "Ruolo",
   "tags": "Tag",
