Editing supported mime types in openapi tool config

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -72,7 +72,7 @@
   "client-id": "Client ID",
   "client-secret": "Client Secret",
   "close": "Close",
-  "coming-soon": "Coming Soon",
+  "comma_separated_list_of_mime_types...": "Comma separated list of mime types...",
   "configure_assistant_before_sending_messages": "Configure assistant before sending messages",
   "configure-singlesignon": "SAML Single Sign-On",
   "configure": "Configure",
@@ -322,6 +322,7 @@
   "submit": "Submit",
   "successfully-joined": "You have successfully joined the workspace.",
   "successfully-subscribed": "You have successfully subscribed.",
+  "supported_attachments_mimetypes": "Supported attachments mime types",
   "system-prompt": "Instructions",
   "table-column-actions": "Actions",
   "table-column-apiendpoint": "API Endpoint",
