--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -72,7 +72,7 @@
   "client-id": "ID Cliente",
   "client-secret": "Segreto Cliente",
   "close": "Chiudi",
-  "coming-soon": "Prossimamente",
+  "comma_separated_list_of_mime_types...": "Lista di mime types separati da virgole...",
   "configure_assistant_before_sending_messages": "Configura l'assistente prima di inviare messaggi",
   "configure-singlesignon": "SAML Single Sign-On",
   "configure": "Configura",
@@ -323,6 +323,7 @@
   "submit": "Invia",
   "successfully-joined": "Sei entrato con successo nel workspace.",
   "successfully-subscribed": "Ti sei iscritto con successo.",
+  "supported_attachments_mimetypes": "Mime type attachement supportati",
   "system-prompt": "Istruzioni",
   "table-column-actions": "Azioni",
   "table-column-apiendpoint": "Endpoint API",
