--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -193,6 +193,7 @@
   "invite-create-account": "Per continuare, devi creare un nuovo account o accedere a un account esistente.",
   "invocation_of_tool": "Invocazione del tool",
   "knowledge": "Conoscenza",
+  "last_upd": "Ultimo\u00A0agg.",
   "legal-disclaimer": "Logicle Chat può commettere errori. Verifica le informazioni importanti.",
   "link_created": "Link creato",
   "links_updated": "Links aggiornati",
