--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -232,6 +232,7 @@
   "no-active-workspace": "Non hai alcun workspace attivo.",
   "no-api-key-description": "Le chiavi API consentono alla tua app di comunicare con l'app",
   "no-credentials": "Credenziali non trovate.",
+  "no_filter": "Non filtrare",
   "none": "Nessuno",
   "older": "Più vecchi",
   "only-me": "Solo io",
@@ -342,7 +343,7 @@
   "table-column-sso-user": "Utente SSO",
   "table-column-type": "Tipo",
   "table-column-user-role": "Ruolo",
-  "tags": "Tag",
+  "tags": "Etichette",
   "temperature": "Temperatura",
   "the_system": "Il sistema",
   "today": "Oggi",
