--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -238,6 +238,8 @@
   "openai_backend": "OpenAI",
   "openapi_spec": "OpenAPI spec",
   "or-sign-in-with": "Or Sign In With",
+  "order_by_name": "Order by name",
+  "order_by_last_usage": "Order by last usage",
   "owner": "Owner",
   "parameters": "Parameters",
   "password-is-required": "The Password field is required",
