Filtering (by tag) and ordering (name / last used) in assistant selection (#408)
* Update lastUsed when creating a chat

* Add a style for dropdown same width as trigger

* Hide chat bar in assistant selection page

* Add button to disable tag based filtering

* No need to use div for avatar, a span is more reasonable

* Using span for badges

* Layout columns depending only on breakpoints

* Appearance...

* Sorting by Last usage / name

* Tidying up

* Reverse ordering

* Added key in map-to-component

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -231,12 +231,15 @@
   "no-active-workspace": "You do not have any active workspace.",
   "no-api-key-description": "API keys allow your app to communicate with app",
   "no-credentials": "No credentials found.",
+  "no_filter": "No filter",
   "none": "None",
   "older": "Older",
   "only-me": "Only me",
   "openai_backend": "OpenAI",
   "openapi_spec": "OpenAPI spec",
   "or-sign-in-with": "Or Sign In With",
+  "order_by_name": "Order by name",
+  "order_by_last_usage": "Order by last usage",
   "owner": "Owner",
   "parameters": "Parameters",
   "password-is-required": "The Password field is required",
