--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -232,12 +232,15 @@
   "no-active-workspace": "Non hai alcun workspace attivo.",
   "no-api-key-description": "Le chiavi API consentono alla tua app di comunicare con l'app",
   "no-credentials": "Credenziali non trovate.",
+  "no_filter": "Non filtrare",
   "none": "Nessuno",
   "older": "Più vecchi",
   "only-me": "Solo io",
   "openai_backend": "OpenAI",
   "openapi_spec": "Specifica OpenAPI",
   "or-sign-in-with": "Oppure Accedi Con",
+  "order_by_name": "Ordina per nome",
+  "order_by_last_usage": "Ordina per ultimo utilizzo",
   "owner": "Proprietario",
   "parameters": "Parametri",
   "password-is-required": "Il campo Password è obbligatorio",
@@ -342,7 +345,7 @@
   "table-column-sso-user": "Utente SSO",
   "table-column-type": "Tipo",
   "table-column-user-role": "Ruolo",
-  "tags": "Tag",
+  "tags": "Etichette",
   "temperature": "Temperatura",
   "the_system": "Il sistema",
   "today": "Oggi",
