And voilà, mermaid flickering is now... almost decent

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -90,7 +90,9 @@
   "conversation_is_not_currently_shared": "Conversation is not currently shared",
   "conversation_sharing": "Conversation sharing",
   "conversation_starters": "Conversation starters",
+  "copied!": "Copied!",
   "copied-to-clipboard": "Copied to clipboard",
+  "copy_code": "Copy code",
   "copy-paste-metadata": "Copy and paste Metadata XML here.",
   "copy-to-clipboard": "Copy",
   "create_assistant_field_name_description": "The name users will see in the app",
