--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -90,7 +90,9 @@
   "conversation_is_not_currently_shared": "La conversazione non è al momento condivisa",
   "conversation_sharing": "Condivisione conversazione",
   "conversation_starters": "Iniziatori di conversazione",
+  "copied!": "Copiato!",
   "copied-to-clipboard": "Copiato negli appunti",
+  "copy_code": "Copia codice",
   "copy-paste-metadata": "Copia e incolla qui il Metadata XML.",
   "copy-to-clipboard": "Copia",
   "create_assistant_field_name_description": "Il nome che gli utenti vedranno nell'app",
