Make assistant sharing configuration a bit more visually appealing

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -169,6 +169,7 @@
   "events-description": "You can choose which events are sent to which endpoint. By default, all messages are sent to all endpoints.",
   "events-to-send": "Events to send",
   "everyone_in_the_company": "Everyone in the company",
+  "everyone_in_the_company_will_be_able_to_use_this_assistant": "Everyone in the company will be able to use this assistant",
   "failed_creating_link": "Failed creating link",
   "failed_sending_message": "Failed sending message",
   "failed_sending_message_not_authorized": "You're not authorized to add messages to this conversation",
@@ -239,6 +240,7 @@
   "none": "None",
   "older": "Older",
   "only-me": "Only me",
+  "only_you_will_have_access_to_this_assistant": "Only you will have access to this assistant",
   "openai_backend": "OpenAI",
   "openapi_spec": "OpenAPI spec",
   "or-sign-in-with": "Or Sign In With",
@@ -303,13 +305,16 @@
   "select_role": "Select a role",
   "select-members-to-add": "Select workspace members",
   "select-tools-to-add": "Select tools to add",
+  "select_workspaces...": "Select workspaces...",
   "send-magic-link": "Send Magic Link",
   "settings-successfully-updated": "Settings have been successfully updated",
   "settings": "Settings",
   "setup-saml-auth": "Fill out the information below to set up SAML authentication for added security",
   "share": "Share",
   "share_with_workspace": "Share with workspace",
+  "share_with_one_or_more_workspaces": "The following workspaces will be able to use and modify this assistant",
   "sharing": "Sharing",
+  "sharing_settings": "Sharing settings",
   "show-in-sidebar": "Show in sidebar",
   "sign-in-with-email": "Sign in with Email",
   "sign-in-with-password": "Sign in with Password",
