--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -264,6 +264,7 @@
   "prompts": "Prompts",
   "provision": "Provision and de-provision users with your directory provider.",
   "public_display_name": "The name of the backend",
+  "publish": "Publish",
   "reasoning_effort": "Reasoning effort",
   "recover": "Recover",
   "redirect-url": "Redirect URL",
