--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -69,6 +69,7 @@
   "choose-new-provider-type-description": "Scegli il tipo di provider LLM per il nuovo backend",
   "choose-new-provider-type": "Scegli il tipo di provider",
   "choose-workspace": "Scegli il tuo workspace",
+  "citations": "Citazioni",
   "clear-all-messages": "Sei sicuro di voler cancellare tutti i messaggi?",
   "client-id": "ID Cliente",
   "client-secret": "Segreto Cliente",
@@ -325,6 +326,7 @@
   "sign-up": "Registrati",
   "signature_algorithm": "Algoritmo di Firma",
   "single-sign-on": "Single Sign On",
+  "sources": "Sources",
   "sp_acs_url": "URL ACS (Assertion Consumer Service) / URL Single Sign-On / URL Destinazione",
   "sp_entity_id": "ID Entità SP / Identificativo / URI Pubblico / Restrizione Pubblico",
   "sp_saml_config_description": "Il tuo Identity Provider (IdP) richiederà le seguenti informazioni durante la configurazione dell'applicazione SAML. Condividi queste informazioni con il tuo amministratore IT.",
