--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -69,6 +69,7 @@
   "choose-new-provider-type-description": "Choose the type of LLM provider for the new backend",
   "choose-new-provider-type": "Choose the provider type",
   "choose-workspace": "Choose your workspace",
+  "citations": "Citations",
   "clear-all-messages": "Are you sure you want to clear all messages?",
   "client-id": "Client ID",
   "client-secret": "Client Secret",
@@ -324,6 +325,7 @@
   "sign-up": "Sign up",
   "signature_algorithm": "Signature Algorithm",
   "single-sign-on": "Single Sign On",
+  "sources": "Fonti",
   "sp_acs_url": "ACS (Assertion Consumer Service) URL / Single Sign-On URL / Destination URL",
   "sp_entity_id": "SP Entity ID / Identifier / Audience URI / Audience Restriction",
   "sp_saml_config_description": "Your Identity Provider (IdP) will ask for the following information while configuring the SAML application. Share this information with your IT administrator.",
