--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -364,6 +364,7 @@
   "togetherai_backend": "Together AI",
   "token-limit": "Token Limit",
   "tool-successfully-created": "Tool has been successfully created",
+  "tool-successfully-deleted": "Tool has been successfully deleted",
   "tools": "Tools",
   "type": "Type",
   "unknown-error": "Unknown Error",
