Tools description and tags (#449)

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -114,6 +114,7 @@
   "create_new": "Create new",
   "create_tool_field_name_label": "Name",
   "create_tool_field_name_placeholder": "Display name of this tool...",
+  "create_tool_field_description_placeholder": "Short description of this tool...",
   "create_tool": "Create tool",
   "create_user": "Create user",
   "create-a-new-account": "Sign up",
@@ -363,6 +364,7 @@
   "togetherai_backend": "Together AI",
   "token-limit": "Token Limit",
   "tool-successfully-created": "Tool has been successfully created",
+  "tool-successfully-deleted": "Tool has been successfully deleted",
   "tools": "Tools",
   "type": "Type",
   "unknown-error": "Unknown Error",
