Added field promptFragment to db and schema

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -115,6 +115,7 @@
   "create_tool_field_name_label": "Name",
   "create_tool_field_name_placeholder": "Display name of this tool...",
   "create_tool_field_description_placeholder": "Short description of this tool...",
+  "create_tool_field_promptfragment_placeholder": "Instructions added to the system prompt...",
   "create_tool": "Create tool",
   "create_user": "Create user",
   "create-a-new-account": "Sign up",
@@ -263,6 +264,7 @@
   "products": "Products",
   "profile-picture": "Profile picture",
   "profile": "Profile",
+  "prompt_fragment": "Prompt fragment",
   "prompts": "Prompts",
   "provision": "Provision and de-provision users with your directory provider.",
   "public_display_name": "The name of the backend",
