--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -115,6 +115,7 @@
   "create_tool_field_name_label": "Nome",
   "create_tool_field_name_placeholder": "Nome visualizzato di questo tool...",
   "create_tool_field_description_placeholder": "Breve descrizione di questo tool...",
+  "create_tool_field_promptfragment_placeholder": "Instruzioni aggiunte al system prompt...",
   "create_tool": "Crea tool",
   "create_user": "Crea utente",
   "create-a-new-account": "Registrati",
@@ -264,6 +265,7 @@
   "products": "Prodotti",
   "profile-picture": "Immagine Profilo",
   "profile": "Profilo",
+  "prompt_fragment": "Frammento di prompt",
   "prompts": "Prompt",
   "provision": "Provisiona e de-provisiona utenti con il tuo provider di directory.",
   "public_display_name": "Il nome del backend",
